# FrameEngine

./: .gitignore  .gitmodules  BasicMaterial_8hpp_source.html  BasicShader_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  Camera_8hpp.html  Camera_8hpp.js  Camera_8hpp__dep__incl.map  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.map  Camera_8hpp__incl.md5  Camera_8hpp_source.html  DefaultPostProcessingShader_8hpp_source.html  Doxyfile  Engine_8hpp.html  Engine_8hpp.js  Engine_8hpp__dep__incl.map  Engine_8hpp__dep__incl.md5  Engine_8hpp__incl.map  Engine_8hpp__incl.md5  Engine_8hpp_source.html  Entity_8hpp.html  Entity_8hpp.js  Entity_8hpp__dep__incl.map  Entity_8hpp__dep__incl.md5  Entity_8hpp__incl.map  Entity_8hpp__incl.md5  Entity_8hpp_source.html  FrameEngine_8hpp_source.html  LightComponent_8hpp_source.html  LightingSystem_8hpp_source.html  Logger_8hpp.html  Logger_8hpp.js  Logger_8hpp__dep__incl.map  Logger_8hpp__dep__incl.md5  Logger_8hpp__incl.map  Logger_8hpp_source.html  Makefile  MaterialComponent_8hpp_source.html  (+517 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  doxygen-deploy.yml
docs/html/: Camera_8hpp.html  Camera_8hpp__incl.map  Camera_8hpp__incl.md5  Camera_8hpp_source.html  Engine_8hpp.html  Engine_8hpp__incl.map  Engine_8hpp_source.html  Entity_8hpp.html  Entity_8hpp.js  Entity_8hpp__dep__incl.map  Entity_8hpp__dep__incl.md5  Entity_8hpp__incl.md5  Entity_8hpp_source.html  LightComponent_8hpp_source.html  Logger_8hpp.html  Logger_8hpp.js  Logger_8hpp__incl.map  Logger_8hpp__incl.md5  Logger_8hpp_source.html  Matrix4_8hpp.html  Matrix4_8hpp__dep__incl.md5  Matrix4_8hpp__incl.md5  Matrix4_8hpp_source.html  MeshGenerator_8hpp_source.html  Mesh_8hpp.html  Mesh_8hpp__dep__incl.map  Mesh_8hpp__dep__incl.md5  Mesh_8hpp__incl.md5  Mesh_8hpp_source.html  Object_8hpp.html  Object_8hpp__incl.map  Object_8hpp__incl.md5  Object_8hpp_source.html  PhysicsComponent_8hpp.html  PhysicsComponent_8hpp.js  PhysicsComponent_8hpp__dep__incl.map  PhysicsComponent_8hpp__dep__incl.md5  PhysicsComponent_8hpp__incl.map  PhysicsComponent_8hpp__incl.md5  PhysicsComponent_8hpp_source.html  (+298 more)
docs/latex/: Camera_8hpp.tex  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.md5  Camera_8hpp_source.tex  Engine_8hpp.tex  Engine_8hpp__incl.md5  Engine_8hpp_source.tex  Entity_8hpp.tex  Entity_8hpp__dep__incl.md5  Entity_8hpp__incl.md5  Entity_8hpp_source.tex  LightComponent_8hpp_source.tex  Logger_8hpp.tex  Logger_8hpp__dep__incl.md5  Logger_8hpp__incl.md5  Logger_8hpp_source.tex  Matrix4_8hpp.tex  Matrix4_8hpp__dep__incl.md5  Matrix4_8hpp__incl.md5  Matrix4_8hpp_source.tex  MeshGenerator_8hpp_source.tex  Mesh_8hpp.tex  Mesh_8hpp__dep__incl.md5  Mesh_8hpp__incl.md5  Mesh_8hpp_source.tex  Object_8hpp.tex  Object_8hpp__dep__incl.md5  Object_8hpp__incl.md5  Object_8hpp_source.tex  PhysicsComponent_8hpp.tex  PhysicsComponent_8hpp__dep__incl.md5  PhysicsComponent_8hpp__incl.md5  PhysicsComponent_8hpp_source.tex  PhysicsSystem_8hpp.tex  PhysicsSystem_8hpp__incl.md5  PhysicsSystem_8hpp_source.tex  PointLight_8hpp_source.tex  Quaternion_8hpp.tex  Quaternion_8hpp__dep__incl.md5  Quaternion_8hpp__incl.md5  (+160 more)
include/: Engine.hpp  Entity.hpp  FrameEngine.hpp  Logger.hpp  MeshGenerator.hpp  Object.hpp  Registry.hpp  Window.hpp
include/adapters/: IRenderer.hpp  X11RendererAdapter.hpp
include/components/: LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  PhysicsComponent.hpp  TransformComponent.hpp
include/core/: Engine.hpp  Entity.hpp  Object.hpp  Registry.hpp
include/materials/: BasicMaterial.hpp
include/math/: Matrix4.hpp  Quaternion.hpp  Vector3.hpp
include/objects/: Object.hpp  PointLight.hpp
include/physics/: PhysicsSystem.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  files_0.js  files_5.js  files_7.js  functions_0.js  (+24 more)
shaders/: basic.fs  basic_fragment.glsl  basic_vertex.glsl  quad.vs  screen.fs
src/: Engine.cpp  main.cpp
(+93 files in other folders)
